syntax = "proto3";

package orders;


service OrderService {
  rpc SaveOnTheWayStatus(OrderRequest) returns (Void) {};
  rpc SaveFinishStatus(OrderRequest) returns (Void) {};
}


message Void {

}


message OrderRequest {
  string orderId = 1;

}